Fase3/kubernetes/configInitReports.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: squidgame
spec: {}
status: {}
--- # DEPLOY GAMES REPORTS
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: games-result
  name: games-result
  namespace: squidgame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: games-result
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: games-result
    spec:
      containers:
      - image: curtex19/games-result-f3
        name: games-result-f3
        resources: {}
status: {}
--- # LOADBALANCER GAMES RESULTS
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: games-result
  name: games-result
  namespace: squidgame
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: games-result
  type: LoadBalancer
status:
  loadBalancer: {}
--- # GAMES LOGS
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: games-logs
  name: games-logs
  namespace: squidgame
spec:
  replicas: 1
  selector:
    matchLabels:
      app: games-logs
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: games-logs
    spec:
      containers:
      - image: curtex19/games-logs-f3
        name: games-logs-f3
        resources: {}
status: {}
--- # LOADBALANCER GAMES LOGS
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: games-logs
  name: games-logs
  namespace: squidgame
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: games-logs
  type: LoadBalancer
status:
  loadBalancer: {}
---
