Fase3/kubernetes/rabbitRoute.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: despliegue-pod-rabbit
  namespace: squidgame
  labels:
    app: despliegue-pod-rabbit
spec:
  selector:
    matchLabels:
      app: despliegue-pod-rabbit
  replicas: 1
  template:
    metadata:
      labels:
        app: despliegue-pod-rabbit
    spec:
      hostname: proyectof3-host-rabbit
      containers:
        - name: rabbit
          image: rabbitmq:management-alpine
          ports:
            - containerPort: 15672
            - containerPort: 5672
        - name: grpc-client-rabbit
          image: rocket1530/grpc_client_rabbit
          ports:
            - containerPort: 8080
        - name: grpc-server-rabbit
          image: rocket1530/grpc_server_rabbit
          ports:
            - containerPort: 50051
        - name: subscriber-rabbit
          image: rocket1530/subscriber_rabbit2
---
apiVersion: v1
kind: Service
metadata:
  name: svc-ruta-rabbit
  namespace: squidgame
  labels:
    app: despliegue-pod-rabbit
spec:
  type: ClusterIP
  selector:
    app: despliegue-pod-rabbit
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
